@@ -1,3 +1,11 @@
+2009-01-29  Hedayat Vatankhah  <hedayat@grad.com>
+
+	* README: 
+	- updated README file
+	
+	* INSTALL: 
+	- added requirements
+
 2009-01-28  Hedayat Vatankhah  <hedayat@grad.com>
 
 	* INSTALL: 
